// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question Question in assessment answered correctly (content only) 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-correct is-active is-mode-assessment is-type-default is-answered"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex="-1"
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      />
      <div
        className="pad responses-hidden"
      >
        (Responses Hidden)
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Question in assessment answered correctly 1`] = `
<form
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-correct is-mockViewState is-type-default is-mode-assessment is-not-form-disabled is-responded-to is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      />
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result correct"
          >
            mock-correct-labels - You received a 100% on this question.
          </p>
        </div>
      </div>
      <fieldset
        disabled={false}
      >
        <legend
          className="instructions"
        />
        <div
          className="assessment-component"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-type-default is-responded-to is-correct is-scored"
            data-focussed={false}
            data-id="mc-assessment-id"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment"
            id="obo-mc-assessment-id"
            tabIndex={-1}
          >
            <div
              role="radiogroup"
            />
          </div>
        </div>
      </fieldset>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
          contentEditable={false}
        >
          <button
            className="button"
            contentEditable={false}
            onClick={[Function]}
            type="button"
          >
            Read an explanation of the answer
          </button>
        </div>
        <div
          className="solution-container-animation-placeholder"
        />
      </div>
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
        contentEditable={false}
      >
        <button
          aria-label="Start Question NaN of undefined"
          className="button"
          contentEditable={false}
          disabled={true}
          type="button"
        >
          Start Question
        </button>
      </div>
    </div>
  </div>
  <div
    className="response-status-container"
  >
    <span
      className="is-response-state-not-sent"
    >
       
    </span>
    <span
      className="is-response-state-sending"
    >
      <div
        aria-label="Loading content"
        className="obojobo-draft--components--throbber"
      >
        <div
          aria-hidden={true}
          className="throbber"
        >
          <svg
            preserveAspectRatio="xMidYMid"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="35"
              stroke="black"
              strokeDasharray="60 110"
              strokeWidth="10"
              transform="rotate(0.82332 50 50)"
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="is-response-state-recorded"
    >
      Answer Saved
    </span>
    <span
      className="is-response-state-error"
    >
      ✖ Error sending response
    </span>
    <span
      className="is-response-state-other"
    >
       
    </span>
  </div>
</form>
`;

exports[`Question Question in assessment answered incorrectly (content only) 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-correct is-active is-mode-assessment is-type-default is-answered"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex="-1"
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      />
      <div
        className="pad responses-hidden"
      >
        (Responses Hidden)
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Question in assessment answered incorrectly 1`] = `
<form
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-correct is-mockViewState is-type-default is-mode-assessment is-not-form-disabled is-responded-to is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      />
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            mock-incorrect-labels - You received a 0% on this question.
          </p>
        </div>
      </div>
      <fieldset
        disabled={false}
      >
        <legend
          className="instructions"
        />
        <div
          className="assessment-component"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-type-default is-responded-to is-not-correct is-scored"
            data-focussed={false}
            data-id="mc-assessment-id"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment"
            id="obo-mc-assessment-id"
            tabIndex={-1}
          >
            <div
              role="radiogroup"
            />
          </div>
        </div>
      </fieldset>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
          contentEditable={false}
        >
          <button
            className="button"
            contentEditable={false}
            onClick={[Function]}
            type="button"
          >
            Read an explanation of the answer
          </button>
        </div>
        <div
          className="solution-container-animation-placeholder"
        />
      </div>
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
        contentEditable={false}
      >
        <button
          aria-label="Start Question NaN of undefined"
          className="button"
          contentEditable={false}
          disabled={true}
          type="button"
        >
          Start Question
        </button>
      </div>
    </div>
  </div>
  <div
    className="response-status-container"
  >
    <span
      className="is-response-state-not-sent"
    >
       
    </span>
    <span
      className="is-response-state-sending"
    >
      <div
        aria-label="Loading content"
        className="obojobo-draft--components--throbber"
      >
        <div
          aria-hidden={true}
          className="throbber"
        >
          <svg
            preserveAspectRatio="xMidYMid"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="35"
              stroke="black"
              strokeDasharray="60 110"
              strokeWidth="10"
              transform="rotate(0.82332 50 50)"
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="is-response-state-recorded"
    >
      Answer Saved
    </span>
    <span
      className="is-response-state-error"
    >
      ✖ Error sending response
    </span>
    <span
      className="is-response-state-other"
    >
       
    </span>
  </div>
</form>
`;

exports[`Question Question in assessment not answered (content only) 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-scored is-active is-mode-assessment is-type-default is-not-answered"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex="-1"
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      />
      <div
        className="pad responses-hidden"
      >
        (Responses Hidden)
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Question in assessment not answered 1`] = `
<form
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-scored is-mockViewState is-type-default is-mode-assessment is-not-form-disabled is-not-responded-to is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      />
      <fieldset
        disabled={false}
      >
        <legend
          className="instructions"
        />
        <div
          className="assessment-component"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-type-default is-not-responded-to is-not-scored is-not-scored"
            data-focussed={false}
            data-id="mc-assessment-id"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment"
            id="obo-mc-assessment-id"
            tabIndex={-1}
          >
            <div
              role="radiogroup"
            />
          </div>
        </div>
      </fieldset>
      <span />
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
        contentEditable={false}
      >
        <button
          aria-label="Start Question NaN of undefined"
          className="button"
          contentEditable={false}
          disabled={true}
          type="button"
        >
          Start Question
        </button>
      </div>
    </div>
  </div>
  <div
    className="response-status-container"
  >
    <span
      className="is-response-state-not-sent"
    >
       
    </span>
    <span
      className="is-response-state-sending"
    >
      <div
        aria-label="Loading content"
        className="obojobo-draft--components--throbber"
      >
        <div
          aria-hidden={true}
          className="throbber"
        >
          <svg
            preserveAspectRatio="xMidYMid"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="35"
              stroke="black"
              strokeDasharray="60 110"
              strokeWidth="10"
              transform="rotate(0.82332 50 50)"
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="is-response-state-recorded"
    >
      Answer Saved
    </span>
    <span
      className="is-response-state-error"
    >
      ✖ Error sending response
    </span>
    <span
      className="is-response-state-other"
    >
       
    </span>
  </div>
</form>
`;

exports[`Question Question in practice answered correctly (content only) 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-correct is-active is-mode-practice is-type-default is-answered"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex="-1"
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      />
      <div
        className="pad responses-hidden"
      >
        (Responses Hidden)
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Question in practice answered correctly 1`] = `
<form
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-correct is-mockViewState is-type-default is-mode-practice is-not-form-disabled is-responded-to is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      />
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result correct"
          >
            mock-correct-labels - You received a 100% on this question.
          </p>
        </div>
      </div>
      <fieldset
        disabled={false}
      >
        <legend
          className="instructions"
        />
        <div
          className="assessment-component"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-practice is-type-default is-responded-to is-correct is-scored"
            data-focussed={false}
            data-id="mc-assessment-id"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment"
            id="obo-mc-assessment-id"
            tabIndex={-1}
          >
            <div
              role="radiogroup"
            />
          </div>
        </div>
      </fieldset>
      <div
        className="submit-and-result-container"
      >
        <div
          className="submit"
        >
          <div
            className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
            contentEditable={false}
          >
            <button
              aria-label="Try Question Again"
              className="button"
              contentEditable={false}
              onClick={[Function]}
              type="button"
            >
              Try Again
            </button>
          </div>
        </div>
        <div
          aria-hidden="true"
          className="result-container"
        >
          <p
            className="result correct"
          >
            mock-correct-labels
          </p>
        </div>
      </div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
          contentEditable={false}
        >
          <button
            className="button"
            contentEditable={false}
            onClick={[Function]}
            type="button"
          >
            Read an explanation of the answer
          </button>
        </div>
        <div
          className="solution-container-animation-placeholder"
        />
      </div>
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
        contentEditable={false}
      >
        <button
          aria-label="Try Question"
          className="button"
          contentEditable={false}
          disabled={true}
          type="button"
        >
          Try Question
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`Question Question in practice answered incorrectly (content only) 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-correct is-active is-mode-practice is-type-default is-answered"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex="-1"
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      />
      <div
        className="pad responses-hidden"
      >
        (Responses Hidden)
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Question in practice answered incorrectly 1`] = `
<form
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-correct is-mockViewState is-type-default is-mode-practice is-not-form-disabled is-responded-to is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      />
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            mock-incorrect-labels - You received a 0% on this question.
          </p>
        </div>
      </div>
      <fieldset
        disabled={false}
      >
        <legend
          className="instructions"
        />
        <div
          className="assessment-component"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-practice is-type-default is-responded-to is-not-correct is-scored"
            data-focussed={false}
            data-id="mc-assessment-id"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment"
            id="obo-mc-assessment-id"
            tabIndex={-1}
          >
            <div
              role="radiogroup"
            />
          </div>
        </div>
      </fieldset>
      <div
        className="submit-and-result-container"
      >
        <div
          className="submit"
        >
          <div
            className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
            contentEditable={false}
          >
            <button
              aria-label="Try Question Again"
              className="button"
              contentEditable={false}
              onClick={[Function]}
              type="button"
            >
              Try Again
            </button>
          </div>
        </div>
        <div
          aria-hidden="true"
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            mock-incorrect-labels
          </p>
        </div>
      </div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
          contentEditable={false}
        >
          <button
            className="button"
            contentEditable={false}
            onClick={[Function]}
            type="button"
          >
            Read an explanation of the answer
          </button>
        </div>
        <div
          className="solution-container-animation-placeholder"
        />
      </div>
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
        contentEditable={false}
      >
        <button
          aria-label="Try Question"
          className="button"
          contentEditable={false}
          disabled={true}
          type="button"
        >
          Try Question
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`Question Question in practice not answered (content only) 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-scored is-active is-mode-practice is-type-default is-not-answered"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex="-1"
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      />
      <div
        className="pad responses-hidden"
      >
        (Responses Hidden)
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Question in practice not answered 1`] = `
<form
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-scored is-mockViewState is-type-default is-mode-practice is-not-form-disabled is-not-responded-to is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      />
      <fieldset
        disabled={false}
      >
        <legend
          className="instructions"
        />
        <div
          className="assessment-component"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-practice is-type-default is-not-responded-to is-not-scored is-not-scored"
            data-focussed={false}
            data-id="mc-assessment-id"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment"
            id="obo-mc-assessment-id"
            tabIndex={-1}
          >
            <div
              role="radiogroup"
            />
          </div>
        </div>
      </fieldset>
      <div
        className="submit-and-result-container"
      >
        <div
          className="submit"
        >
          <div
            className="obojobo-draft--components--button is-not-dangerous align-center"
            contentEditable={false}
          >
            <button
              className="button"
              contentEditable={false}
              disabled={true}
              type="submit"
            >
              Check Your Answer
            </button>
          </div>
        </div>
      </div>
      <span />
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
        contentEditable={false}
      >
        <button
          aria-label="Try Question"
          className="button"
          contentEditable={false}
          disabled={true}
          type="button"
        >
          Try Question
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`Question Question in review answered correctly (content only) 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-correct is-active is-mode-review is-type-default is-answered"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex="-1"
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      />
      <div
        className="pad responses-hidden"
      >
        (Responses Hidden)
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Question in review answered correctly 1`] = `
<form
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-correct is-active is-type-default is-mode-review is-not-form-disabled is-responded-to is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      />
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result correct"
          >
            Correct - You received a 100% on this question.
          </p>
        </div>
      </div>
      <fieldset
        disabled={false}
      >
        <legend
          className="instructions"
        />
        <div
          className="assessment-component"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-review is-type-default is-responded-to is-correct is-scored"
            data-focussed={false}
            data-id="mc-assessment-id"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment"
            id="obo-mc-assessment-id"
            tabIndex={-1}
          >
            <div
              role="radiogroup"
            />
          </div>
        </div>
      </fieldset>
      <div
        className="submit-and-result-container"
      >
        <div
          aria-hidden="true"
          className="result-container"
        >
          <p
            className="result correct"
          >
            Correct
          </p>
        </div>
      </div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
          contentEditable={false}
        >
          <button
            className="button"
            contentEditable={false}
            onClick={[Function]}
            type="button"
          >
            Read an explanation of the answer
          </button>
        </div>
        <div
          className="solution-container-animation-placeholder"
        />
      </div>
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
        contentEditable={false}
      >
        <button
          aria-label="Start Question NaN of undefined"
          className="button"
          contentEditable={false}
          disabled={true}
          type="button"
        >
          Start Question
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`Question Question in review answered incorrectly (content only) 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-correct is-active is-mode-review is-type-default is-answered"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex="-1"
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      />
      <div
        className="pad responses-hidden"
      >
        (Responses Hidden)
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Question in review answered incorrectly 1`] = `
<form
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-correct is-active is-type-default is-mode-review is-not-form-disabled is-responded-to is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      />
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            Incorrect - You received a 0% on this question.
          </p>
        </div>
      </div>
      <fieldset
        disabled={false}
      >
        <legend
          className="instructions"
        />
        <div
          className="assessment-component"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-review is-type-default is-responded-to is-not-correct is-scored"
            data-focussed={false}
            data-id="mc-assessment-id"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment"
            id="obo-mc-assessment-id"
            tabIndex={-1}
          >
            <div
              role="radiogroup"
            />
          </div>
        </div>
      </fieldset>
      <div
        className="submit-and-result-container"
      >
        <div
          aria-hidden="true"
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            Incorrect
          </p>
        </div>
      </div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
          contentEditable={false}
        >
          <button
            className="button"
            contentEditable={false}
            onClick={[Function]}
            type="button"
          >
            Read an explanation of the answer
          </button>
        </div>
        <div
          className="solution-container-animation-placeholder"
        />
      </div>
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
        contentEditable={false}
      >
        <button
          aria-label="Start Question NaN of undefined"
          className="button"
          contentEditable={false}
          disabled={true}
          type="button"
        >
          Start Question
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`Question Question in review not answered (content only) 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-scored is-active is-mode-review is-type-default is-not-answered"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex="-1"
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      />
      <div
        className="pad responses-hidden"
      >
        (Responses Hidden)
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Question in review not answered 1`] = `
<form
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-scored is-active is-type-default is-mode-review is-not-form-disabled is-not-responded-to is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      />
      <fieldset
        disabled={false}
      >
        <legend
          className="instructions"
        />
        <div
          className="assessment-component"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-review is-type-default is-not-responded-to is-not-scored is-not-scored"
            data-focussed={false}
            data-id="mc-assessment-id"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment"
            id="obo-mc-assessment-id"
            tabIndex={-1}
          >
            <div
              role="radiogroup"
            />
          </div>
        </div>
      </fieldset>
      <div
        className="submit-and-result-container"
      />
      <span />
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
        contentEditable={false}
      >
        <button
          aria-label="Start Question NaN of undefined"
          className="button"
          contentEditable={false}
          disabled={true}
          type="button"
        >
          Start Question
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`Question Survey question in assessment answered (content only) 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-no-score is-active is-mode-assessment is-type-survey is-answered"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex="-1"
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      >
        <svg
          className="obojobo-draft--chunks--question--survey-question-icon"
          viewBox="0 0 23.65 22.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.35,0H1.3A1.3,1.3,0,0,0,0,1.3V16.59a1.3,1.3,0,0,0,1.3,1.29H15.08L19.7,22.5V17.88h2.65a1.3,1.3,0,0,0,1.3-1.29V1.3A1.3,1.3,0,0,0,22.35,0ZM11.69,14.69a1.25,1.25,0,1,1,1.25-1.25A1.24,1.24,0,0,1,11.69,14.69Zm1-3.84a.31.31,0,0,1-.31.29H11.08c-.2,0-.32-.12-.32-.35,0-2.69,2.58-3.29,2.58-4.78,0-.74-.61-1.2-1.44-1.2A2.1,2.1,0,0,0,10,6.08c-.08.16-.14.19-.33.16L8.12,5.87C8,5.82,8,5.67,8,5.53a4,4,0,0,1,3.92-2.34c2.28,0,3.77,1.2,3.77,2.69C15.68,8.3,12.65,8.59,12.65,10.85Z"
            fill="#231f20"
          />
        </svg>
      </div>
      <div
        className="pad responses-hidden"
      >
        (Responses Hidden)
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Survey question in assessment answered 1`] = `
<form
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-no-score is-mockViewState is-type-survey is-mode-assessment is-not-form-disabled is-responded-to is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      >
        <svg
          className="obojobo-draft--chunks--question--survey-question-icon"
          viewBox="0 0 23.65 22.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.35,0H1.3A1.3,1.3,0,0,0,0,1.3V16.59a1.3,1.3,0,0,0,1.3,1.29H15.08L19.7,22.5V17.88h2.65a1.3,1.3,0,0,0,1.3-1.29V1.3A1.3,1.3,0,0,0,22.35,0ZM11.69,14.69a1.25,1.25,0,1,1,1.25-1.25A1.24,1.24,0,0,1,11.69,14.69Zm1-3.84a.31.31,0,0,1-.31.29H11.08c-.2,0-.32-.12-.32-.35,0-2.69,2.58-3.29,2.58-4.78,0-.74-.61-1.2-1.44-1.2A2.1,2.1,0,0,0,10,6.08c-.08.16-.14.19-.33.16L8.12,5.87C8,5.82,8,5.67,8,5.53a4,4,0,0,1,3.92-2.34c2.28,0,3.77,1.2,3.77,2.69C15.68,8.3,12.65,8.59,12.65,10.85Z"
            fill="#231f20"
          />
        </svg>
      </div>
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          aria-hidden={false}
          className="result-container"
        >
          <p
            className="result survey"
          >
            mock-correct-labels
          </p>
        </div>
      </div>
      <fieldset
        disabled={false}
      >
        <legend
          className="instructions"
        />
        <div
          className="assessment-component"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-type-survey is-responded-to is-no-score is-scored"
            data-focussed={false}
            data-id="mc-assessment-id"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment"
            id="obo-mc-assessment-id"
            tabIndex={-1}
          >
            <div
              role="radiogroup"
            />
          </div>
        </div>
      </fieldset>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
          contentEditable={false}
        >
          <button
            className="button"
            contentEditable={false}
            onClick={[Function]}
            type="button"
          >
            Read an explanation of the answer
          </button>
        </div>
        <div
          className="solution-container-animation-placeholder"
        />
      </div>
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
        contentEditable={false}
      >
        <button
          aria-label="Start Question NaN of undefined"
          className="button"
          contentEditable={false}
          disabled={true}
          type="button"
        >
          Start Question
        </button>
      </div>
    </div>
  </div>
  <div
    className="response-status-container"
  >
    <span
      className="is-response-state-not-sent"
    >
       
    </span>
    <span
      className="is-response-state-sending"
    >
      <div
        aria-label="Loading content"
        className="obojobo-draft--components--throbber"
      >
        <div
          aria-hidden={true}
          className="throbber"
        >
          <svg
            preserveAspectRatio="xMidYMid"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="35"
              stroke="black"
              strokeDasharray="60 110"
              strokeWidth="10"
              transform="rotate(0.82332 50 50)"
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="is-response-state-recorded"
    >
      Answer Saved
    </span>
    <span
      className="is-response-state-error"
    >
      ✖ Error sending response
    </span>
    <span
      className="is-response-state-other"
    >
       
    </span>
  </div>
</form>
`;

exports[`Question Survey question in assessment not answered (content only) 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-scored is-active is-mode-assessment is-type-survey is-not-answered"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex="-1"
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      >
        <svg
          className="obojobo-draft--chunks--question--survey-question-icon"
          viewBox="0 0 23.65 22.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.35,0H1.3A1.3,1.3,0,0,0,0,1.3V16.59a1.3,1.3,0,0,0,1.3,1.29H15.08L19.7,22.5V17.88h2.65a1.3,1.3,0,0,0,1.3-1.29V1.3A1.3,1.3,0,0,0,22.35,0ZM11.69,14.69a1.25,1.25,0,1,1,1.25-1.25A1.24,1.24,0,0,1,11.69,14.69Zm1-3.84a.31.31,0,0,1-.31.29H11.08c-.2,0-.32-.12-.32-.35,0-2.69,2.58-3.29,2.58-4.78,0-.74-.61-1.2-1.44-1.2A2.1,2.1,0,0,0,10,6.08c-.08.16-.14.19-.33.16L8.12,5.87C8,5.82,8,5.67,8,5.53a4,4,0,0,1,3.92-2.34c2.28,0,3.77,1.2,3.77,2.69C15.68,8.3,12.65,8.59,12.65,10.85Z"
            fill="#231f20"
          />
        </svg>
      </div>
      <div
        className="pad responses-hidden"
      >
        (Responses Hidden)
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Survey question in assessment not answered 1`] = `
<form
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-scored is-mockViewState is-type-survey is-mode-assessment is-not-form-disabled is-not-responded-to is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      >
        <svg
          className="obojobo-draft--chunks--question--survey-question-icon"
          viewBox="0 0 23.65 22.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.35,0H1.3A1.3,1.3,0,0,0,0,1.3V16.59a1.3,1.3,0,0,0,1.3,1.29H15.08L19.7,22.5V17.88h2.65a1.3,1.3,0,0,0,1.3-1.29V1.3A1.3,1.3,0,0,0,22.35,0ZM11.69,14.69a1.25,1.25,0,1,1,1.25-1.25A1.24,1.24,0,0,1,11.69,14.69Zm1-3.84a.31.31,0,0,1-.31.29H11.08c-.2,0-.32-.12-.32-.35,0-2.69,2.58-3.29,2.58-4.78,0-.74-.61-1.2-1.44-1.2A2.1,2.1,0,0,0,10,6.08c-.08.16-.14.19-.33.16L8.12,5.87C8,5.82,8,5.67,8,5.53a4,4,0,0,1,3.92-2.34c2.28,0,3.77,1.2,3.77,2.69C15.68,8.3,12.65,8.59,12.65,10.85Z"
            fill="#231f20"
          />
        </svg>
      </div>
      <fieldset
        disabled={false}
      >
        <legend
          className="instructions"
        />
        <div
          className="assessment-component"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-type-survey is-not-responded-to is-not-scored is-not-scored"
            data-focussed={false}
            data-id="mc-assessment-id"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment"
            id="obo-mc-assessment-id"
            tabIndex={-1}
          >
            <div
              role="radiogroup"
            />
          </div>
        </div>
      </fieldset>
      <span />
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
        contentEditable={false}
      >
        <button
          aria-label="Start Question NaN of undefined"
          className="button"
          contentEditable={false}
          disabled={true}
          type="button"
        >
          Start Question
        </button>
      </div>
    </div>
  </div>
  <div
    className="response-status-container"
  >
    <span
      className="is-response-state-not-sent"
    >
       
    </span>
    <span
      className="is-response-state-sending"
    >
      <div
        aria-label="Loading content"
        className="obojobo-draft--components--throbber"
      >
        <div
          aria-hidden={true}
          className="throbber"
        >
          <svg
            preserveAspectRatio="xMidYMid"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="35"
              stroke="black"
              strokeDasharray="60 110"
              strokeWidth="10"
              transform="rotate(0.82332 50 50)"
            />
          </svg>
        </div>
      </div>
    </span>
    <span
      className="is-response-state-recorded"
    >
      Answer Saved
    </span>
    <span
      className="is-response-state-error"
    >
      ✖ Error sending response
    </span>
    <span
      className="is-response-state-other"
    >
       
    </span>
  </div>
</form>
`;

exports[`Question Survey question in practice answered (content only) 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-no-score is-active is-mode-practice is-type-survey is-answered"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex="-1"
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      >
        <svg
          className="obojobo-draft--chunks--question--survey-question-icon"
          viewBox="0 0 23.65 22.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.35,0H1.3A1.3,1.3,0,0,0,0,1.3V16.59a1.3,1.3,0,0,0,1.3,1.29H15.08L19.7,22.5V17.88h2.65a1.3,1.3,0,0,0,1.3-1.29V1.3A1.3,1.3,0,0,0,22.35,0ZM11.69,14.69a1.25,1.25,0,1,1,1.25-1.25A1.24,1.24,0,0,1,11.69,14.69Zm1-3.84a.31.31,0,0,1-.31.29H11.08c-.2,0-.32-.12-.32-.35,0-2.69,2.58-3.29,2.58-4.78,0-.74-.61-1.2-1.44-1.2A2.1,2.1,0,0,0,10,6.08c-.08.16-.14.19-.33.16L8.12,5.87C8,5.82,8,5.67,8,5.53a4,4,0,0,1,3.92-2.34c2.28,0,3.77,1.2,3.77,2.69C15.68,8.3,12.65,8.59,12.65,10.85Z"
            fill="#231f20"
          />
        </svg>
      </div>
      <div
        className="pad responses-hidden"
      >
        (Responses Hidden)
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Survey question in practice answered 1`] = `
<form
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-no-score is-mockViewState is-type-survey is-mode-practice is-not-form-disabled is-responded-to is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      >
        <svg
          className="obojobo-draft--chunks--question--survey-question-icon"
          viewBox="0 0 23.65 22.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.35,0H1.3A1.3,1.3,0,0,0,0,1.3V16.59a1.3,1.3,0,0,0,1.3,1.29H15.08L19.7,22.5V17.88h2.65a1.3,1.3,0,0,0,1.3-1.29V1.3A1.3,1.3,0,0,0,22.35,0ZM11.69,14.69a1.25,1.25,0,1,1,1.25-1.25A1.24,1.24,0,0,1,11.69,14.69Zm1-3.84a.31.31,0,0,1-.31.29H11.08c-.2,0-.32-.12-.32-.35,0-2.69,2.58-3.29,2.58-4.78,0-.74-.61-1.2-1.44-1.2A2.1,2.1,0,0,0,10,6.08c-.08.16-.14.19-.33.16L8.12,5.87C8,5.82,8,5.67,8,5.53a4,4,0,0,1,3.92-2.34c2.28,0,3.77,1.2,3.77,2.69C15.68,8.3,12.65,8.59,12.65,10.85Z"
            fill="#231f20"
          />
        </svg>
      </div>
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          aria-hidden={false}
          className="result-container"
        >
          <p
            className="result survey"
          >
            mock-correct-labels
          </p>
        </div>
      </div>
      <fieldset
        disabled={false}
      >
        <legend
          className="instructions"
        />
        <div
          className="assessment-component"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-practice is-type-survey is-responded-to is-no-score is-scored"
            data-focussed={false}
            data-id="mc-assessment-id"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment"
            id="obo-mc-assessment-id"
            tabIndex={-1}
          >
            <div
              role="radiogroup"
            />
          </div>
        </div>
      </fieldset>
      <div
        className="submit-and-result-container"
      >
        <div
          className="submit"
        >
          <div
            className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
            contentEditable={false}
          >
            <button
              aria-label="Change Response"
              className="button"
              contentEditable={false}
              onClick={[Function]}
              type="button"
            >
              Change Response
            </button>
          </div>
        </div>
        <div
          aria-hidden={true}
          className="result-container"
        >
          <p
            className="result survey"
          >
            mock-correct-labels
          </p>
        </div>
      </div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
          contentEditable={false}
        >
          <button
            className="button"
            contentEditable={false}
            onClick={[Function]}
            type="button"
          >
            Read an explanation of the answer
          </button>
        </div>
        <div
          className="solution-container-animation-placeholder"
        />
      </div>
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
        contentEditable={false}
      >
        <button
          aria-label="Try Question"
          className="button"
          contentEditable={false}
          disabled={true}
          type="button"
        >
          Try Question
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`Question Survey question in practice not answered (content only) 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-scored is-active is-mode-practice is-type-survey is-not-answered"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex="-1"
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      >
        <svg
          className="obojobo-draft--chunks--question--survey-question-icon"
          viewBox="0 0 23.65 22.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.35,0H1.3A1.3,1.3,0,0,0,0,1.3V16.59a1.3,1.3,0,0,0,1.3,1.29H15.08L19.7,22.5V17.88h2.65a1.3,1.3,0,0,0,1.3-1.29V1.3A1.3,1.3,0,0,0,22.35,0ZM11.69,14.69a1.25,1.25,0,1,1,1.25-1.25A1.24,1.24,0,0,1,11.69,14.69Zm1-3.84a.31.31,0,0,1-.31.29H11.08c-.2,0-.32-.12-.32-.35,0-2.69,2.58-3.29,2.58-4.78,0-.74-.61-1.2-1.44-1.2A2.1,2.1,0,0,0,10,6.08c-.08.16-.14.19-.33.16L8.12,5.87C8,5.82,8,5.67,8,5.53a4,4,0,0,1,3.92-2.34c2.28,0,3.77,1.2,3.77,2.69C15.68,8.3,12.65,8.59,12.65,10.85Z"
            fill="#231f20"
          />
        </svg>
      </div>
      <div
        className="pad responses-hidden"
      >
        (Responses Hidden)
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Survey question in practice not answered 1`] = `
<form
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-scored is-mockViewState is-type-survey is-mode-practice is-not-form-disabled is-not-responded-to is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      >
        <svg
          className="obojobo-draft--chunks--question--survey-question-icon"
          viewBox="0 0 23.65 22.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.35,0H1.3A1.3,1.3,0,0,0,0,1.3V16.59a1.3,1.3,0,0,0,1.3,1.29H15.08L19.7,22.5V17.88h2.65a1.3,1.3,0,0,0,1.3-1.29V1.3A1.3,1.3,0,0,0,22.35,0ZM11.69,14.69a1.25,1.25,0,1,1,1.25-1.25A1.24,1.24,0,0,1,11.69,14.69Zm1-3.84a.31.31,0,0,1-.31.29H11.08c-.2,0-.32-.12-.32-.35,0-2.69,2.58-3.29,2.58-4.78,0-.74-.61-1.2-1.44-1.2A2.1,2.1,0,0,0,10,6.08c-.08.16-.14.19-.33.16L8.12,5.87C8,5.82,8,5.67,8,5.53a4,4,0,0,1,3.92-2.34c2.28,0,3.77,1.2,3.77,2.69C15.68,8.3,12.65,8.59,12.65,10.85Z"
            fill="#231f20"
          />
        </svg>
      </div>
      <fieldset
        disabled={false}
      >
        <legend
          className="instructions"
        />
        <div
          className="assessment-component"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-practice is-type-survey is-not-responded-to is-not-scored is-not-scored"
            data-focussed={false}
            data-id="mc-assessment-id"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment"
            id="obo-mc-assessment-id"
            tabIndex={-1}
          >
            <div
              role="radiogroup"
            />
          </div>
        </div>
      </fieldset>
      <div
        className="submit-and-result-container"
      >
        <div
          className="submit"
        >
          <div
            className="obojobo-draft--components--button is-not-dangerous align-center"
            contentEditable={false}
          >
            <button
              className="button"
              contentEditable={false}
              disabled={true}
              type="submit"
            >
              Submit Response
            </button>
          </div>
        </div>
      </div>
      <span />
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
        contentEditable={false}
      >
        <button
          aria-label="Try Question"
          className="button"
          contentEditable={false}
          disabled={true}
          type="button"
        >
          Try Question
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`Question Survey question in review answered (content only) 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-no-score is-active is-mode-review is-type-survey is-answered"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex="-1"
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      >
        <svg
          className="obojobo-draft--chunks--question--survey-question-icon"
          viewBox="0 0 23.65 22.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.35,0H1.3A1.3,1.3,0,0,0,0,1.3V16.59a1.3,1.3,0,0,0,1.3,1.29H15.08L19.7,22.5V17.88h2.65a1.3,1.3,0,0,0,1.3-1.29V1.3A1.3,1.3,0,0,0,22.35,0ZM11.69,14.69a1.25,1.25,0,1,1,1.25-1.25A1.24,1.24,0,0,1,11.69,14.69Zm1-3.84a.31.31,0,0,1-.31.29H11.08c-.2,0-.32-.12-.32-.35,0-2.69,2.58-3.29,2.58-4.78,0-.74-.61-1.2-1.44-1.2A2.1,2.1,0,0,0,10,6.08c-.08.16-.14.19-.33.16L8.12,5.87C8,5.82,8,5.67,8,5.53a4,4,0,0,1,3.92-2.34c2.28,0,3.77,1.2,3.77,2.69C15.68,8.3,12.65,8.59,12.65,10.85Z"
            fill="#231f20"
          />
        </svg>
      </div>
      <div
        className="pad responses-hidden"
      >
        (Responses Hidden)
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Survey question in review answered 1`] = `
<form
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-no-score is-active is-type-survey is-mode-review is-not-form-disabled is-responded-to is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      >
        <svg
          className="obojobo-draft--chunks--question--survey-question-icon"
          viewBox="0 0 23.65 22.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.35,0H1.3A1.3,1.3,0,0,0,0,1.3V16.59a1.3,1.3,0,0,0,1.3,1.29H15.08L19.7,22.5V17.88h2.65a1.3,1.3,0,0,0,1.3-1.29V1.3A1.3,1.3,0,0,0,22.35,0ZM11.69,14.69a1.25,1.25,0,1,1,1.25-1.25A1.24,1.24,0,0,1,11.69,14.69Zm1-3.84a.31.31,0,0,1-.31.29H11.08c-.2,0-.32-.12-.32-.35,0-2.69,2.58-3.29,2.58-4.78,0-.74-.61-1.2-1.44-1.2A2.1,2.1,0,0,0,10,6.08c-.08.16-.14.19-.33.16L8.12,5.87C8,5.82,8,5.67,8,5.53a4,4,0,0,1,3.92-2.34c2.28,0,3.77,1.2,3.77,2.69C15.68,8.3,12.65,8.59,12.65,10.85Z"
            fill="#231f20"
          />
        </svg>
      </div>
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          aria-hidden={false}
          className="result-container"
        >
          <p
            className="result survey"
          >
            Correct
          </p>
        </div>
      </div>
      <fieldset
        disabled={false}
      >
        <legend
          className="instructions"
        />
        <div
          className="assessment-component"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-review is-type-survey is-responded-to is-no-score is-scored"
            data-focussed={false}
            data-id="mc-assessment-id"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment"
            id="obo-mc-assessment-id"
            tabIndex={-1}
          >
            <div
              role="radiogroup"
            />
          </div>
        </div>
      </fieldset>
      <div
        className="submit-and-result-container"
      >
        <div
          aria-hidden={true}
          className="result-container"
        >
          <p
            className="result survey"
          >
            Correct
          </p>
        </div>
      </div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
          contentEditable={false}
        >
          <button
            className="button"
            contentEditable={false}
            onClick={[Function]}
            type="button"
          >
            Read an explanation of the answer
          </button>
        </div>
        <div
          className="solution-container-animation-placeholder"
        />
      </div>
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
        contentEditable={false}
      >
        <button
          aria-label="Start Question NaN of undefined"
          className="button"
          contentEditable={false}
          disabled={true}
          type="button"
        >
          Start Question
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`Question Survey question in review not answered (content only) 1`] = `
<div
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-scored is-active is-mode-review is-type-survey is-not-answered"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  role="region"
  tabIndex="-1"
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      >
        <svg
          className="obojobo-draft--chunks--question--survey-question-icon"
          viewBox="0 0 23.65 22.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.35,0H1.3A1.3,1.3,0,0,0,0,1.3V16.59a1.3,1.3,0,0,0,1.3,1.29H15.08L19.7,22.5V17.88h2.65a1.3,1.3,0,0,0,1.3-1.29V1.3A1.3,1.3,0,0,0,22.35,0ZM11.69,14.69a1.25,1.25,0,1,1,1.25-1.25A1.24,1.24,0,0,1,11.69,14.69Zm1-3.84a.31.31,0,0,1-.31.29H11.08c-.2,0-.32-.12-.32-.35,0-2.69,2.58-3.29,2.58-4.78,0-.74-.61-1.2-1.44-1.2A2.1,2.1,0,0,0,10,6.08c-.08.16-.14.19-.33.16L8.12,5.87C8,5.82,8,5.67,8,5.53a4,4,0,0,1,3.92-2.34c2.28,0,3.77,1.2,3.77,2.69C15.68,8.3,12.65,8.59,12.65,10.85Z"
            fill="#231f20"
          />
        </svg>
      </div>
      <div
        className="pad responses-hidden"
      >
        (Responses Hidden)
      </div>
    </div>
  </div>
</div>
`;

exports[`Question Survey question in review not answered 1`] = `
<form
  aria-label="Question"
  className="component obojobo-draft--chunks--question is-not-scored is-active is-type-survey is-mode-review is-not-form-disabled is-not-responded-to is-not-flipping"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Question"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  role="region"
  tabIndex={-1}
>
  <div
    className="flipper"
  >
    <div
      className="content-back"
    >
      <div
        className="obojobo-draft--chunks--question--content"
      >
        <svg
          className="obojobo-draft--chunks--question--survey-question-icon"
          viewBox="0 0 23.65 22.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.35,0H1.3A1.3,1.3,0,0,0,0,1.3V16.59a1.3,1.3,0,0,0,1.3,1.29H15.08L19.7,22.5V17.88h2.65a1.3,1.3,0,0,0,1.3-1.29V1.3A1.3,1.3,0,0,0,22.35,0ZM11.69,14.69a1.25,1.25,0,1,1,1.25-1.25A1.24,1.24,0,0,1,11.69,14.69Zm1-3.84a.31.31,0,0,1-.31.29H11.08c-.2,0-.32-.12-.32-.35,0-2.69,2.58-3.29,2.58-4.78,0-.74-.61-1.2-1.44-1.2A2.1,2.1,0,0,0,10,6.08c-.08.16-.14.19-.33.16L8.12,5.87C8,5.82,8,5.67,8,5.53a4,4,0,0,1,3.92-2.34c2.28,0,3.77,1.2,3.77,2.69C15.68,8.3,12.65,8.59,12.65,10.85Z"
            fill="#231f20"
          />
        </svg>
      </div>
      <fieldset
        disabled={false}
      >
        <legend
          className="instructions"
        />
        <div
          className="assessment-component"
        >
          <div
            className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-review is-type-survey is-not-responded-to is-not-scored is-not-scored"
            data-focussed={false}
            data-id="mc-assessment-id"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.MCAssessment"
            id="obo-mc-assessment-id"
            tabIndex={-1}
          >
            <div
              role="radiogroup"
            />
          </div>
        </div>
      </fieldset>
      <div
        className="submit-and-result-container"
      />
      <span />
    </div>
    <div
      className="blocker-front"
      onClick={[Function]}
    >
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center"
        contentEditable={false}
      >
        <button
          aria-label="Start Question NaN of undefined"
          className="button"
          contentEditable={false}
          disabled={true}
          type="button"
        >
          Start Question
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`Question renderResponseSendState renders as expected 1`] = `
<span
  className="is-response-state-not-sent"
>
   
</span>
`;

exports[`Question renderResponseSendState renders as expected 2`] = `
<span
  className="is-response-state-sending"
>
  <Throbber />
</span>
`;

exports[`Question renderResponseSendState renders as expected 3`] = `
<span
  className="is-response-state-recorded"
>
  Answer Saved
</span>
`;

exports[`Question renderResponseSendState renders as expected 4`] = `
<span
  className="is-response-state-error"
>
  ✖ Error sending response, try again
</span>
`;

exports[`Question renderResponseSendState renders as expected 5`] = `
<span
  className="is-response-state-other"
>
   
</span>
`;
